--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Navbar -->
     <nav class=" navbar navbar-expand-lg bg-body-tertiary">
         <div class="mx-4 container-fluid">
-            <a class="navbar-brand" href="#">XEL Framework</a>
+            <a class="navbar-brand" href="#"><img src="logo.jpeg" alt="" width="50" height="50"> XEL Framework</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
